style: fix dark mode style and app height

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,17 +14,11 @@ a {
     text-decoration: none;
 }
 
-html,
-body,
-#root {
-    height: 100%;
-    background-color: #eadef5;
-}
-
 .app {
-    @include flex(row, space-between, center);
+    @include flex(row, space-between, flex-start);
     padding: 20px 30px;
-    height: 100%;
+    min-height: 100vh;
+    background-color: #eadef5;
 
     .sidebar {
         @include flex(column, flex-start, center);
